docs projection + SSE; node on events; determinism headers
Add DocSnapshotRepository, DocProjector, DocController (SET/DEL/GET + time-travel)

Add SSE endpoints: /api/time/stream and /api/time/{id}/stream

Promote node on TemporalEvent; map in Postgres; stronger idempotency hash; publish only on insert

DeterminismFilter honoring X-CF-Seed / X-CF-Node

Controller param-name fixes; compile with -parameters

Update README and test adjustments